Added missing alt for images

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.png" />
+        <img src="./assets/images/nina.png" alt="Picture of Nina" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -142,46 +142,55 @@
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.min.jpg"
+            alt="Picture of lights during a concert"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.min.jpg"
+            alt="Picture of a man in a suit"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.min.jpg"
+            alt="Picture of a woman laughing"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.min.jpg"
+            alt="Picture of hands"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.min.jpg"
+            alt="Picture of a man with his eyes closed"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.min.jpg"
+            alt="Picture of a couple during their wedding"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.min.jpg"
+            alt="Picture of a woman with glases"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.min.jpg"
+            alt="Picture of a singer during a concert"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.min.jpg"
+            alt="Picture of a woman in front of a computer"
           />
         </div>
       </div>
@@ -279,7 +288,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.png" />
+          <img src="./assets/images/camera.png" alt="Picture of a camera" />
         </div>
       </div>
     </div>
