--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <title>Nina Carducci</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,7 +35,8 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img src="assets/images/instagram.png" alt=""
+              aria-label="Instagram page"
+              ><img src="assets/images/instagram.png" alt="Instagram logo"
             /></a>
           </li>
         </ul>
@@ -74,21 +75,21 @@
             <img
               src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.min.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Picture of a man walking"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.min.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Picture of a crowd"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.min.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Picture of a groom kissing a bride"
             />
           </div>
         </div>
@@ -274,11 +275,11 @@
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
           <form action="" method="post">
-            <label>Nom</label>
+            <label for="nom">Nom</label>
             <input type="text" name="nom" id="nom" />
-            <label>Email</label>
+            <label for="email">Email</label>
             <input type="email" name="email" id="email" />
-            <label>Message</label>
+            <label for="message">Message</label>
             <textarea
               name="message"
               id="message"
