--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
   <head>
     <title>Nina Carducci</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="language" content="fr-FR" />
+    <meta
+      name="description"
+      content="Découvrez le travail de Nina Carducci, photographe !"
+    />
+    <meta property="og:site_name" content="Nina Carducci" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Nina Carducci - Photographe" />
+    <meta
+      property="og:description"
+      content="Découvrez le travail de Nina Carducci, photographe !"
+    />
+    <meta property="og:image" content="./assets/images/nina.png" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,7 +25,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <meta charset="UTF-8" />
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
