--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       property="og:description"
       content="Découvrez le travail de Nina Carducci, photographe !"
     />
-    <meta property="og:image" content="./assets/images/nina.png" />
+    <meta
+      property="og:image"
+      content="https://streyan.github.io/Openclassrooms_nina-carducci/assets/images/nina.png"
+    />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
