--- a/index.html
+++ b/index.html
@@ -7,19 +7,35 @@
     <meta name="language" content="fr-FR" />
     <meta
       name="description"
-      content="Découvrez le travail de Nina Carducci, photographe !"
+      content="Découvrez le travail de Nina Carducci, photographe"
     />
+
     <meta property="og:site_name" content="Nina Carducci" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ninacarducci.github.io/" />
     <meta property="og:title" content="Nina Carducci - Photographe" />
     <meta
       property="og:description"
-      content="Découvrez le travail de Nina Carducci, photographe !"
+      content="Découvrez le travail de Nina Carducci, photographe"
     />
     <meta
       property="og:image"
       content="https://streyan.github.io/Openclassrooms_nina-carducci/assets/images/nina.png"
     />
+
+    <meta name="twitter:card" content="test" />
+    <meta name="twitter:site" content="@test" />
+    <meta name="twitter:title" content="Nina Carducci - Photographe" />
+    <meta
+      name="twitter:description"
+      content="Découvrez le travail de Nina Carducci, photographe"
+    />
+    <meta
+      name="twitter:image"
+      content="https://streyan.github.io/Openclassrooms_nina-carducci/assets/images/nina.png"
+    />
+    <meta name="twitter:url" content="https://ninacarducci.github.io/" />
+
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
