--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+            srcset="
+              ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-copie.jpg  400w,
+              ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg       2000w
+            "
+            sizes="50vw"
             alt="Picture of lights during a concert"
           />
           <img
