--- a/index.html
+++ b/index.html
@@ -216,13 +216,23 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+            src="./assets/images/gallery/entreprise/ali-morshedlou-large.jpg"
+            srcset="
+              ./assets/images/gallery/entreprise/ali-morshedlou-small.jpg  375w,
+              ./assets/images/gallery/entreprise/ali-morshedlou-medium.jpg 440w
+            "
+            sizes="50vw"
             alt="Picture of a man in a suit"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+            src="./assets/images/gallery/entreprise/jason-goodman-large.jpg"
+            srcset="
+              ./assets/images/gallery/entreprise/jason-goodman-small.jpg  375w,
+              ./assets/images/gallery/entreprise/jason-goodman-medium.jpg 440w
+            "
+            sizes="50vw"
             alt="Picture of a woman laughing"
           />
           <img
@@ -252,13 +262,23 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+            src="./assets/images/gallery/concerts/austin-neill-large.jpg"
+            srcset="
+              ./assets/images/gallery/concerts/austin-neill-small.jpg  375w,
+              ./assets/images/gallery/concerts/austin-neill-medium.jpg 440w
+            "
+            sizes="50vw"
             alt="Picture of a singer during a concert"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+            src="./assets/images/gallery/entreprise/mateus-campos-felipe-large.jpg"
+            srcset="
+              ./assets/images/gallery/entreprise/mateus-campos-felipe-small.jpg  375w,
+              ./assets/images/gallery/entreprise/mateus-campos-felipe-medium.jpg 440w
+            "
+            sizes="50vw"
             alt="Picture of a woman in front of a computer"
           />
         </div>
