--- a/index.html
+++ b/index.html
@@ -135,21 +135,36 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
+              src="./assets/images/slider/ryoji-iwata-large.jpg"
+              srcset="
+                ./assets/images/slider/ryoji-iwata-small.jpg   375w,
+                ./assets/images/slider/ryoji-iwata-medium.jpg 1920w
+              "
+              sizes="50vw"
               class="d-block w-100"
               alt="Picture of a man walking"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
+              src="./assets/images/slider/nicholas-green-large.jpg"
+              srcset="
+                ./assets/images/slider/nicholas-green-small.jpg   375w,
+                ./assets/images/slider/nicholas-green-medium.jpg 1920w
+              "
+              sizes="50vw"
               class="d-block w-100"
               alt="Picture of a crowd"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
+              src="./assets/images/slider/edward-cisneros-large.jpg"
+              srcset="
+                ./assets/images/slider/edward-cisneros-small.jpg   375w,
+                ./assets/images/slider/edward-cisneros-medium.jpg 1920w
+              "
+              sizes="50vw"
               class="d-block w-100"
               alt="Picture of a groom kissing a bride"
             />
