test for last images

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
         <img
           src="./assets/images/nina-large.png"
           srcset="
-            ./assets/images/nina-small.jpg  250w,
-            ./assets/images/nina-medium.jpg 560w
+            ./assets/images/nina-small.png  250w,
+            ./assets/images/nina-medium.png 560w
           "
           sizes="50vw"
           alt="Picture of Nina"
@@ -264,8 +264,8 @@
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-large.jpg"
             srcset="
-              ./assets/images/mariage/hannah-busing-small.jpg   375w,
-              ./assets/images/mariage/hannah-busing-medium.jpg 1920w
+              ./assets/images/gallery/mariage/hannah-busing-small.jpg   375w,
+              ./assets/images/gallery/mariage/hannah-busing-medium.jpg 1920w
             "
             sizes="50vw"
             alt="Picture of hands"
@@ -275,8 +275,8 @@
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-large.jpg"
             srcset="
-              ./assets/images/portraits/ade-tunji-small.jpg   375w,
-              ./assets/images/portraits/ade-tunji-medium.jpg 1920w
+              ./assets/images/gallery/portraits/ade-tunji-small.jpg   375w,
+              ./assets/images/gallery/portraits/ade-tunji-medium.jpg 1920w
             "
             sizes="50vw"
             alt="Picture of a man with his eyes closed"
@@ -286,8 +286,8 @@
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-large.jpg"
             srcset="
-              ./assets/images/mariage/jakob-owens-small.jpg   375w,
-              ./assets/images/mariage/jakob-owens-medium.jpg 1920w
+              ./assets/images/gallery/mariage/jakob-owens-small.jpg   375w,
+              ./assets/images/gallery/mariage/jakob-owens-medium.jpg 1920w
             "
             sizes="50vw"
             alt="Picture of a couple during their wedding"
@@ -297,8 +297,8 @@
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg-large.jpg"
             srcset="
-              ./assets/images/portraits/nino-van-prattenburg-small.jpg   375w,
-              ./assets/images/portraits/nino-van-prattenburg-medium.jpg 1920w
+              ./assets/images/gallery/portraits/nino-van-prattenburg-small.jpg   375w,
+              ./assets/images/gallery/portraits/nino-van-prattenburg-medium.jpg 1920w
             "
             sizes="50vw"
             alt="Picture of a woman with glases"
@@ -424,8 +424,8 @@
           <img
             src="./assets/images/camera-large.png"
             srcset="
-              ./assets/images/camera-small.jpg  418w,
-              ./assets/images/camera-medium.jpg 230w
+              ./assets/images/camera-small.png  418w,
+              ./assets/images/camera-medium.png 230w
             "
             sizes="50vw"
             alt="Picture of a camera"
