test for js files

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     />
     <meta name="twitter:url" content="https://ninacarducci.github.io/" />
 
-    <script type="application/ld+json">
+    <script type="application/ld+json" async>
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
@@ -74,14 +74,15 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+    <script src="./assets/bootstrap/bootstrap.bundle.js" async></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
+      async
     ></script>
-    <script src="./assets/maugallery.js"></script>
-    <script src="./assets/scripts.js"></script>
+    <script src="./assets/maugallery.js" async></script>
+    <script src="./assets/scripts.js" async></script>
   </head>
   <body>
     <header class="top-header">
