--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
     </script>
 
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
+    <link
+      rel="preload"
+      href="./assets/bootstrap/bootstrap_delay.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
