--- a/index.html
+++ b/index.html
@@ -105,15 +105,8 @@
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
               aria-label="Instagram page"
-            >
-              <picture>
-                <source
-                  type="image/webp"
-                  srcset="assets/images/instagram.webp"
-                />
-                <img src="assets/images/instagram.jpg" alt="Instagram logo" />
-              </picture>
-            </a>
+              ><img src="assets/images/instagram.png" alt="Instagram logo"
+            /></a>
           </li>
         </ul>
       </nav>
@@ -148,79 +141,40 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <picture>
-              <source
-                type="image/webp"
-                src="./assets/images/slider/ryoji-iwata-large.webp"
-                srcset="
-                  ./assets/images/slider/ryoji-iwata-small.webp   375w,
-                  ./assets/images/slider/ryoji-iwata-medium.webp 1920w
-                "
-                sizes="50vw"
-                class="d-block w-100"
-                alt="Picture of a man walking"
-              />
-              <img
-                src="./assets/images/slider/ryoji-iwata-large.jpg"
-                srcset="
-                  ./assets/images/slider/ryoji-iwata-small.jpg   375w,
-                  ./assets/images/slider/ryoji-iwata-medium.jpg 1920w
-                "
-                sizes="50vw"
-                class="d-block w-100"
-                alt="Picture of a man walking"
-              />
-            </picture>
+            <img
+              src="./assets/images/slider/ryoji-iwata-large.jpg"
+              srcset="
+                ./assets/images/slider/ryoji-iwata-small.jpg   375w,
+                ./assets/images/slider/ryoji-iwata-medium.jpg 1920w
+              "
+              sizes="50vw"
+              class="d-block w-100"
+              alt="Picture of a man walking"
+            />
           </div>
           <div class="carousel-item">
-            <picture>
-              <source
-                type="image/webp"
-                src="./assets/images/slider/nicholas-green-large.webp"
-                srcset="
-                  ./assets/images/slider/nicholas-green-small.webp   375w,
-                  ./assets/images/slider/nicholas-green-medium.webp 1920w
-                "
-                sizes="50vw"
-                class="d-block w-100"
-                alt="Picture of a crowd"
-              />
-              <img
-                src="./assets/images/slider/nicholas-green-large.jpg"
-                srcset="
-                  ./assets/images/slider/nicholas-green-small.jpg   375w,
-                  ./assets/images/slider/nicholas-green-medium.jpg 1920w
-                "
-                sizes="50vw"
-                class="d-block w-100"
-                alt="Picture of a crowd"
-              />
-            </picture>
+            <img
+              src="./assets/images/slider/nicholas-green-large.jpg"
+              srcset="
+                ./assets/images/slider/nicholas-green-small.jpg   375w,
+                ./assets/images/slider/nicholas-green-medium.jpg 1920w
+              "
+              sizes="50vw"
+              class="d-block w-100"
+              alt="Picture of a crowd"
+            />
           </div>
           <div class="carousel-item">
-            <picture>
-              <source
-                type="image/webp"
-                src="./assets/images/slider/edward-cisneros-large.webp"
-                srcset="
-                  ./assets/images/slider/edward-cisneros-small.webp   375w,
-                  ./assets/images/slider/edward-cisneros-medium.webp 1920w
-                "
-                sizes="50vw"
-                class="d-block w-100"
-                alt="Picture of a groom kissing a bride"
-              />
-              <img
-                src="./assets/images/slider/edward-cisneros-large.jpg"
-                srcset="
-                  ./assets/images/slider/edward-cisneros-small.jpg   375w,
-                  ./assets/images/slider/edward-cisneros-medium.jpg 1920w
-                "
-                sizes="50vw"
-                class="d-block w-100"
-                alt="Picture of a groom kissing a bride"
-              />
-            </picture>
+            <img
+              src="./assets/images/slider/edward-cisneros-large.jpg"
+              srcset="
+                ./assets/images/slider/edward-cisneros-small.jpg   375w,
+                ./assets/images/slider/edward-cisneros-medium.jpg 1920w
+              "
+              sizes="50vw"
+              class="d-block w-100"
+              alt="Picture of a groom kissing a bride"
+            />
           </div>
         </div>
         <button
@@ -245,27 +199,15 @@
     </div>
     <section id="about">
       <div class="picture left">
-        <picture>
-          <source
-            type="image/webp"
-            src="./assets/images/nina-large.webp"
-            srcset="
-              ./assets/images/nina-small.webp  250w,
-              ./assets/images/nina-medium.webp 560w
-            "
-            sizes="50vw"
-            alt="Picture of Nina"
-          />
-          <img
-            src="./assets/images/nina-large.png"
-            srcset="
-              ./assets/images/nina-small.png  250w,
-              ./assets/images/nina-medium.png 560w
-            "
-            sizes="50vw"
-            alt="Picture of Nina"
-          />
-        </picture>
+        <img
+          src="./assets/images/nina-large.png"
+          srcset="
+            ./assets/images/nina-small.png  250w,
+            ./assets/images/nina-medium.png 560w
+          "
+          sizes="50vw"
+          alt="Picture of Nina"
+        />
       </div>
       <div id="about-me">
         <h2 class="about-me__title">A propos de moi</h2>
@@ -290,28 +232,6 @@
       <h2 class="title">Portfolio</h2>
       <div class="container py-3">
         <div class="gallery" style="display: none">
-          <picture>
-            <source
-              type="image/webp"
-              src="./assets/images/nina-large.webp"
-              srcset="
-                ./assets/images/nina-small.webp  250w,
-                ./assets/images/nina-medium.webp 560w
-              "
-              sizes="50vw"
-              alt="Picture of Nina"
-            />
-            <img
-              src="./assets/images/nina-large.png"
-              srcset="
-                ./assets/images/nina-small.png  250w,
-                ./assets/images/nina-medium.png 560w
-              "
-              sizes="50vw"
-              alt="Picture of Nina"
-            />
-          </picture>
-
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
