--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="https://streyan.github.io/Openclassrooms_nina-carducci/assets/images/nina-large.webp"
+      content="https://streyan.github.io/Openclassrooms_nina-carducci/assets/images/nina-large.png"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -32,7 +32,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://streyan.github.io/Openclassrooms_nina-carducci/assets/images/nina-large.webp"
+      content="https://streyan.github.io/Openclassrooms_nina-carducci/assets/images/nina-large.png"
     />
     <meta name="twitter:url" content="https://ninacarducci.github.io/" />
 
@@ -105,7 +105,7 @@
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
               aria-label="Instagram page"
-              ><img src="assets/images/instagram.webp" alt="Instagram logo"
+              ><img src="assets/images/instagram.png" alt="Instagram logo"
             /></a>
           </li>
         </ul>
@@ -142,10 +142,10 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/slider/ryoji-iwata-large.webp"
+              src="./assets/images/slider/ryoji-iwata-large.jpg"
               srcset="
-                ./assets/images/slider/ryoji-iwata-small.webp   375w,
-                ./assets/images/slider/ryoji-iwata-medium.webp 1920w
+                ./assets/images/slider/ryoji-iwata-small.jpg   375w,
+                ./assets/images/slider/ryoji-iwata-medium.jpg 1920w
               "
               sizes="50vw"
               class="d-block w-100"
@@ -154,10 +154,10 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/nicholas-green-large.webp"
+              src="./assets/images/slider/nicholas-green-large.jpg"
               srcset="
-                ./assets/images/slider/nicholas-green-small.webp   375w,
-                ./assets/images/slider/nicholas-green-medium.webp 1920w
+                ./assets/images/slider/nicholas-green-small.jpg   375w,
+                ./assets/images/slider/nicholas-green-medium.jpg 1920w
               "
               sizes="50vw"
               class="d-block w-100"
@@ -166,10 +166,10 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/edward-cisneros-large.webp"
+              src="./assets/images/slider/edward-cisneros-large.jpg"
               srcset="
-                ./assets/images/slider/edward-cisneros-small.webp   375w,
-                ./assets/images/slider/edward-cisneros-medium.webp 1920w
+                ./assets/images/slider/edward-cisneros-small.jpg   375w,
+                ./assets/images/slider/edward-cisneros-medium.jpg 1920w
               "
               sizes="50vw"
               class="d-block w-100"
@@ -200,10 +200,10 @@
     <section id="about">
       <div class="picture left">
         <img
-          src="./assets/images/nina-large.webp"
+          src="./assets/images/nina-large.png"
           srcset="
-            ./assets/images/nina-small.webp  250w,
-            ./assets/images/nina-medium.webp 560w
+            ./assets/images/nina-small.png  250w,
+            ./assets/images/nina-medium.png 560w
           "
           sizes="50vw"
           alt="Picture of Nina"
@@ -235,10 +235,10 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="./assets/images/gallery/concerts/aaron-paul-large.webp"
+            src="./assets/images/gallery/concerts/aaron-paul-large.jpg"
             srcset="
-              ./assets/images/gallery/concerts/aaron-paul-small.webp  375w,
-              ./assets/images/gallery/concerts/aaron-paul-medium.webp 440w
+              ./assets/images/gallery/concerts/aaron-paul-small.jpg  375w,
+              ./assets/images/gallery/concerts/aaron-paul-medium.jpg 440w
             "
             sizes="50vw"
             alt="Picture of lights during a concert"
@@ -246,10 +246,10 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/ali-morshedlou-large.webp"
+            src="./assets/images/gallery/entreprise/ali-morshedlou-large.jpg"
             srcset="
-              ./assets/images/gallery/entreprise/ali-morshedlou-small.webp  375w,
-              ./assets/images/gallery/entreprise/ali-morshedlou-medium.webp 440w
+              ./assets/images/gallery/entreprise/ali-morshedlou-small.jpg  375w,
+              ./assets/images/gallery/entreprise/ali-morshedlou-medium.jpg 440w
             "
             sizes="50vw"
             alt="Picture of a man in a suit"
@@ -257,10 +257,10 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/jason-goodman-large.webp"
+            src="./assets/images/gallery/entreprise/jason-goodman-large.jpg"
             srcset="
-              ./assets/images/gallery/entreprise/jason-goodman-small.webp  375w,
-              ./assets/images/gallery/entreprise/jason-goodman-medium.webp 440w
+              ./assets/images/gallery/entreprise/jason-goodman-small.jpg  375w,
+              ./assets/images/gallery/entreprise/jason-goodman-medium.jpg 440w
             "
             sizes="50vw"
             alt="Picture of a woman laughing"
@@ -268,10 +268,10 @@
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/hannah-busing-large.webp"
+            src="./assets/images/gallery/mariage/hannah-busing-large.jpg"
             srcset="
-              ./assets/images/gallery/mariage/hannah-busing-small.webp   375w,
-              ./assets/images/gallery/mariage/hannah-busing-medium.webp 1920w
+              ./assets/images/gallery/mariage/hannah-busing-small.jpg   375w,
+              ./assets/images/gallery/mariage/hannah-busing-medium.jpg 1920w
             "
             sizes="50vw"
             alt="Picture of hands"
@@ -279,10 +279,10 @@
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/ade-tunji-large.webp"
+            src="./assets/images/gallery/portraits/ade-tunji-large.jpg"
             srcset="
-              ./assets/images/gallery/portraits/ade-tunji-small.webp   375w,
-              ./assets/images/gallery/portraits/ade-tunji-medium.webp 1920w
+              ./assets/images/gallery/portraits/ade-tunji-small.jpg   375w,
+              ./assets/images/gallery/portraits/ade-tunji-medium.jpg 1920w
             "
             sizes="50vw"
             alt="Picture of a man with his eyes closed"
@@ -290,10 +290,10 @@
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/jakob-owens-large.webp"
+            src="./assets/images/gallery/mariage/jakob-owens-large.jpg"
             srcset="
-              ./assets/images/gallery/mariage/jakob-owens-small.webp   375w,
-              ./assets/images/gallery/mariage/jakob-owens-medium.webp 1920w
+              ./assets/images/gallery/mariage/jakob-owens-small.jpg   375w,
+              ./assets/images/gallery/mariage/jakob-owens-medium.jpg 1920w
             "
             sizes="50vw"
             alt="Picture of a couple during their wedding"
@@ -301,10 +301,10 @@
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/nino-van-prattenburg-large.webp"
+            src="./assets/images/gallery/portraits/nino-van-prattenburg-large.jpg"
             srcset="
-              ./assets/images/gallery/portraits/nino-van-prattenburg-small.webp   375w,
-              ./assets/images/gallery/portraits/nino-van-prattenburg-medium.webp 1920w
+              ./assets/images/gallery/portraits/nino-van-prattenburg-small.jpg   375w,
+              ./assets/images/gallery/portraits/nino-van-prattenburg-medium.jpg 1920w
             "
             sizes="50vw"
             alt="Picture of a woman with glases"
@@ -312,10 +312,10 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="./assets/images/gallery/concerts/austin-neill-large.webp"
+            src="./assets/images/gallery/concerts/austin-neill-large.jpg"
             srcset="
-              ./assets/images/gallery/concerts/austin-neill-small.webp  375w,
-              ./assets/images/gallery/concerts/austin-neill-medium.webp 440w
+              ./assets/images/gallery/concerts/austin-neill-small.jpg  375w,
+              ./assets/images/gallery/concerts/austin-neill-medium.jpg 440w
             "
             sizes="50vw"
             alt="Picture of a singer during a concert"
@@ -323,10 +323,10 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/mateus-campos-felipe-large.webp"
+            src="./assets/images/gallery/entreprise/mateus-campos-felipe-large.jpg"
             srcset="
-              ./assets/images/gallery/entreprise/mateus-campos-felipe-small.webp  375w,
-              ./assets/images/gallery/entreprise/mateus-campos-felipe-medium.webp 440w
+              ./assets/images/gallery/entreprise/mateus-campos-felipe-small.jpg  375w,
+              ./assets/images/gallery/entreprise/mateus-campos-felipe-medium.jpg 440w
             "
             sizes="50vw"
             alt="Picture of a woman in front of a computer"
@@ -428,10 +428,10 @@
         </div>
         <div class="picture right">
           <img
-            src="./assets/images/camera-large.webp"
+            src="./assets/images/camera-large.png"
             srcset="
-              ./assets/images/camera-small.webp  418w,
-              ./assets/images/camera-medium.webp 230w
+              ./assets/images/camera-small.png  418w,
+              ./assets/images/camera-medium.png 230w
             "
             sizes="50vw"
             alt="Picture of a camera"
