--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="https://streyan.github.io/Openclassrooms_nina-carducci/assets/images/nina-large.png"
     />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@test" />
     <meta name="twitter:title" content="Nina Carducci - Photographe" />
     <meta
